# x3d2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  modules.json
interface/: alloc_tdsops.html  allocator_t.html  apply_bc.html  boundary_conditions.html  case_channel_t.html  case_cylinder_t.html  case_generic_t.html  case_tgv_t.html  checkpoint_manager_t.html  copy_data_to_f.html  copy_f_to_data.html  cuda_allocator_t.html  cuda_backend_t.html  cuda_field_t.html  cuda_poisson_fft_t.html  cuda_tdsops_t.html  cufftexecc2r_c.html  cufftexecr2c_c.html  define_bc.html  derive_field_from_gradients.html  fft_backward.html  fft_forward.html  fft_postprocess.html  field_max_mean.html  field_ops.html  field_process.html  field_reduce.html  field_set_face.html  field_set_face_from_field.html  field_t.html  forcings.html  get_index_reordering.html  ibm_t.html  init_poisson_fft.html  initial_conditions.html  mesh_t.html  omp_backend_t.html  omp_poisson_fft_t.html  poisson_solver.html  poisson_xxx.html  (+21 more)
lists/: files.html  modules.html  procedures.html  types.html
module/: m_adios2_io.html  m_allocator.html  m_base_backend.html  m_base_case.html  m_case_channel.html  m_case_cylinder.html  m_case_generic.html  m_case_tgv.html  m_checkpoint_manager.html  m_checkpoint_manager_impl.html  m_checkpoint_manager~2.html  m_checkpoint_state.html  m_common.html  m_config.html  m_cuda_allocator.html  m_cuda_backend.html  m_cuda_common.html  m_cuda_exec_dist.html  m_cuda_exec_thom.html  m_cuda_kernels_dist.html  m_cuda_kernels_fieldops.html  m_cuda_kernels_reorder.html  m_decomp.html  (+36 more)
(+561 files in other folders)
